# contagion

./: .gitignore  Cargo.toml  README.md  attributions.org
assets/: sprite-list.md
assets/images/old/: authors.txt
milestone-docs/: grand-finale.org  grand-finale.txt  minimally-playable.txt  playable.txt  robust-game.org  robust-game.txt  skeletal-game.txt
src/: game.rs  main.rs  main_menu.rs  scene.rs  scenemanager.rs
src/assets/: sprite-list.md
src/constants/: mod.rs  presentation.rs  simulation.rs
src/core/: matrix.rs  mod.rs  scalar.rs  vector.rs
src/core/geo/: circle.rs  mod.rs  polygon.rs  segment2.rs
src/core/geo/intersect/: mod.rs  rectangle_point.rs  segment_circle.rs
src/core/simulation/ai/: pathfinding.rs
src/core/vector/: mod.rs  vector.rs  vector2.rs  vector3.rs  vector4.rs
src/presentation/: camera.rs  display.rs  mod.rs
src/presentation/audio/: audio.rs  mod.rs  sound_effects.rs
src/presentation/graphics/: background.vs.glsl  font.rs  fs.frag  gui.fs.glsl  gui.vs.glsl  infection.fs.glsl  infection.vs.glsl  mod.rs  renderer.rs  shadow.fs.glsl  shadow.vs.glsl  shape.fs.glsl  shape.vs.glsl  sprite.rs  text.fs.glsl  text.vs.glsl  vs.vert  window.rs
src/presentation/ui/: glium_text.rs  gui.rs  mod.rs
src/scenes/: difficulty_screen.rs  game.rs  loss_screen.rs  main_menu.rs  mod.rs  scene.rs  victory_screen.rs
src/simulation/: barricade.rs  control.rs  game_state.rs  initial_state.rs  mod.rs  state.rs  update.rs
src/simulation/ai/: mod.rs  path.rs  pathfinding.rs  polygon.rs
