[package]
name = "contagion"
version = "0.1.0"
authors = ["Ian McCall <ianmccall93@gmail.com>", "Raghav Thakur <raghav.thakur.rt.20@gmail.com>", "Kayci", "Behar", "John", "Cate"]
edition = "2018"

[dependencies]
enum-map = "0.5.0"
glium_sdl2 = "0.15"
glium = "0.18"
image = "*"
lerp = "0.2.0"
num = "0.2"
rand = "0.6.0"
rand_xorshift = "0.1.1"
freetype-sys = "0.7"
libc = "0.2"
piston-music = "0.23.0"

[dependencies.sdl2]
version = "0.30"
default-features = false
features = ["ttf"]

# See https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html
# for details on patching libraries like this
[patch.crates-io]
piston-music = { git = "https://github.com/SongWithoutWords/music", branch = "volume-fix" }
